--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="shortcut icon" href="Hack.ico" type="image/x-icon">
+    <title>Form 
     <title>Form Validation</title>
 </head>
 <body>
-    <header>
-      <h3 class="sticky-bottom">Hackathon</h3>
-    </header>
     <main>
+        <div class="head"><h3 class="sticky-bottom">Hackathon</h3></div>
     <div class="container">
         <form>
             <div class="mb-3">
